--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="triangle-images">
         <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Menduvada.jpg" alt="Scenery 1">
         <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Dosa1.jpg" alt="Scenery 2">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Dal Rice.jpg" alt="Scenery 3">
+        <img src="kubera-hotel-guestHouse/Dal Rice.jpg" alt="Scenery 3">
     </div>
     
     <!-- Amenities Section -->
