--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Hotel 4.jpg" alt="Feature 4">
     </div>
     <div class="triangle-images">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Menduvada.jpg" alt="Scenery 1">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Dosa1.jpg" alt="Scenery 2">
+        <img src="Menduvada.jpg" alt="Scenery 1">
+        <img src="Dosa1.jpg" alt="Scenery 2">
         <img src="Dal Rice.jpg" alt="Scenery 4">
     </div>
     
