--- a/index.html
+++ b/index.html
@@ -171,19 +171,19 @@
     
     <div class="hero">
         <!-- Slideshow images -->
-        <div class="slide" style="background-image: url('C:/Users/harshita/Pictures/pics/Hotel1.jpg');"></div>
-        <div class="slide" style="background-image: url('C:/Users/harshita/Pictures/pics/Hotel2.jpg');"></div>
-        <div class="slide" style="background-image: url('C:/Users/harshita/Pictures/Hotel Kubera/new pics/Room 1.jpg');"></div>
+        <div class="slide" style="background-image: url('Hotel1.jpg');"></div>
+        <div class="slide" style="background-image: url('Hotel2.jpg');"></div>
+        <div class="slide" style="background-image: url('Room 1.jpg');"></div>
     </div>
     
     <div class="description">
         <p>Hotel Kubera & Guest House—your cozy, budget-friendly retreat near Vrindavan Studio, Umbergaon Beach, and the Umbergaon industrial area. Enjoy clean, comfortable rooms, personalized food options, and warm hospitality, whether you're here for work or relaxation. Affordable comfort, peaceful vibes, and a prime location—book your stay today!</p>
     </div>
     <div class="image-grid">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Hotel 1.JPG" alt="Feature 1">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Hotel 2.JPG" alt="Feature 2">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Hotel 3.jpg" alt="Feature 3">
-        <img src="C:\Users\harshita\Pictures\Hotel Kubera\new pics\Hotel 4.jpg" alt="Feature 4">
+        <img src="Hotel 1.JPG" alt="Feature 1">
+        <img src="Hotel 2.JPG" alt="Feature 2">
+        <img src="Hotel 3.jpg" alt="Feature 3">
+        <img src="Hotel 4.jpg" alt="Feature 4">
     </div>
     <div class="triangle-images">
         <img src="Menduvada.jpg" alt="Scenery 6">
