--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </div>
     <div class="triangle-images">
         <img src="Menduvada.jpg" alt="Scenery 6">
-        <img src="Dosa1.jpg" alt="Scenery 5">
+        <img src="Dal Rice.jpg" alt="Scenery 5">
         <img src="Dal Rice.jpg" alt="Scenery 4">
     </div>
     
