--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <img src="Hotel 4.jpg" alt="Feature 4">
     </div>
     <div class="triangle-images">
-        <img src="Menduvada.jpg" alt="Scenery 6">
-        <img src="Dal Rice.jpg" alt="Scenery 5">
+        <img src="Menduvada.jpg">
+        <img src="Dal Rice.jpg">
         <img src="Dal Rice.jpg" alt="Scenery 4">
     </div>
     
