--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="triangle-images">
         <img src="Menduvada.jpg">
         <img src="Dal Rice.jpg">
-        <img src="Dal Rice.jpg" alt="Scenery 4">
+        <img src="Dosa1.jpg" alt="Scenery 4">
     </div>
     
     <!-- Amenities Section -->
