--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     
     <div class="hero">
         <!-- Slideshow images -->
-        <div class="slide" style="background-image: url('Hotel 1.jpg');"></div>
-        <div class="slide" style="background-image: url('Hotel 2.jpg');"></div>
+        <div class="slide" style="background-image: url('Background1.JPG');"></div>
+        <div class="slide" style="background-image: url('Background2.JPG');"></div>
         <div class="slide" style="background-image: url('Room 1.jpg');"></div>
     </div>
     
